name:                criterion-compare
version:             0.1.0.0
synopsis:            A simple tool for visualising differences in Criterion benchmark results
-- description:         
homepage:            http://github.com/bgamari/criterion-compare
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable criterion-compare
  main-is:             CriterionCompare.hs
  other-extensions:    GeneralizedNewtypeDeriving, RecordWildCards, OverloadedStrings, FlexibleContexts, TupleSections
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.10,
                       cassava >=0.4 && <0.5,
                       containers >=0.5 && <0.6,
                       Chart >=1.6 && <1.8,
                       data-default >=0.5 && <0.6,
                       lens >=4.13 && <4.15,
                       colour >=2.3 && <2.4,
                       text >=1.2 && <1.3,
                       filepath >=1.4 && <1.5,
                       lucid >=2.9 && <2.10,
                       Chart-diagrams >=1.6 && <1.8,
                       optparse-applicative >=0.12 && <0.13,
                       clay >=0.10 && <0.11,
                       vector >=0.11 && <0.12,
                       bytestring >=0.10 && <0.11
